--- a/index.css
+++ b/index.css
@@ -1,12 +1,292 @@
+* {
+   padding: 0;
+   margin: 0;
+   border: 0;
+}
+
+*,
+*:before,
+*:after {
+   -webkit-box-sizing: border-box;
+   box-sizing: border-box;
+}
+
+:focus,
+:active {
+   outline: none;
+}
+
+a:focus,
+a:active {
+   outline: none;
+}
+
+nav,
+footer,
+header,
+aside {
+   display: block;
+}
+
+html,
+body {
+   height: 100%;
+   width: 100%;
+   font-size: 100%;
+   line-height: 1;
+   font-size: 14px;
+   -ms-text-size-adjust: 100%;
+   -moz-text-size-adjust: 100%;
+   -webkit-text-size-adjust: 100%;
+}
+
+input,
+button,
+textarea {
+   font-family: inherit;
+}
+
+input::-ms-clear {
+   display: none;
+}
+
+button {
+   cursor: pointer;
+}
+
+button::-moz-focus-inner {
+   padding: 0;
+   border: 0;
+}
+
+a,
+a:visited {
+   text-decoration: none;
+}
+
+a:hover {
+   text-decoration: none;
+}
+
+ul li {
+   list-style: none;
+}
+
+img {
+   vertical-align: top;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+   font-size: inherit;
+   font-weight: inherit;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 header {
    background-image: url(/assets/images/Background/header-bg-img.jpg);
    background-repeat: no-repeat;
    background-position: center;
-   width: 100%;
+   width: 1920px;
    height: 100vh;
+   margin: 0px;
+   padding: 0px;
 
 }
 
+.conteiner {
+   width: 1180px;
+   margin: 0 auto;
+}
+
+.header-top {
+   padding: 10px 0 0 0;
+   display: flex;
+   justify-content: space-between;
+}
+
+.header-top__list {
+   display: flex;
+
+}
+
+.header-top__list li {
+   padding: 0 10px 0 0;
+}
+
+.logo {}
+
+.logo__link {}
+
+.logo__link-image {}
+
+.personal {}
+
+.personal__list {
+   display: flex;
+}
+
+.personal__list li {
+   padding: 0 10px 0 0;
+}
+
+.line {}
+
+.social {}
+
+.social__list {
+   display: flex;
+}
+
+.social__list li {
+   padding: 0 10px 0 0;
+}
+
+.header-content {
+   text-align: center;
+   padding: 60px 0 0 0;
+}
+
+.smoothies__title {}
+
+.smoothies__decription {}
+
+.features {}
+
+.features__items {
+   display: flex;
+}
+
+.features__item {}
+
+.features__item-img {}
+
+.features__item-text {}
+
+
+section.about {
+   background-color: #12816b;
+   display: flex;
+}
+
+.products {}
+
+.products__items {
+   display: flex;
+}
+
+.products__item {}
+
+.products__item-image {}
+
+.products__item-title {}
+
+.products__item-mesure {}
+
+.products__item-button {}
+
+
+.story {
+   display: flex;
+}
+
+.story__description {}
+
+.story__description-title {}
+
+.story__description-article {}
+
+.story__description-button {}
+
+.story__images {}
+
+
+
+.testimonials {
+   background-color: #673118;
+}
+
+.testimonials__title {}
+
+.testimonials__title-name {}
+
+.testimonials__inner {
+   display: flex;
+}
+
+.testimonials__comment {}
+
+.testimonials__comment-article {}
+
+.testimonials__comment-author {}
+
+.testimonials__image {}
+
+.arrows {}
+
+
+.blog {}
+
+.blog__title {}
+
+.blog__inner {
+   display: flex;
+}
+
+.blog__image {}
+
+.blog__description {}
+
+.blog__description-title {}
+
+
+
+
+.instagram {}
+
+.instagram__user {}
+
+.instagram__user-link {}
+
+.instagram__image-items {
+   display: flex;
+}
+
+.instagram__image-item {}
+
+.instagram__image {}
+
+.instagram__image-icon {}
 
 footer {
    background-color: rgba(68, 207, 121, 0.562);
