--- a/css/index.css
+++ b/css/index.css
@@ -21,6 +21,7 @@ header {
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center;
+   background-attachment: fixed;
    height: 100vh;
    width: 100%;
 }
@@ -91,13 +92,10 @@ a {
    background-color: #fff;
    text-align: center;
    border-radius: 50%;
-   -webkit-border-radius: 50%;
-   -moz-border-radius: 50%;
-   -ms-border-radius: 50%;
-   -o-border-radius: 50%;
-
-
-
+   -webkit-border-radius: ;
+   -moz-border-radius: ;
+   -ms-border-radius: ;
+   -o-border-radius: ;
 }
 
 .social__list-link {
@@ -148,6 +146,50 @@ a {
 
 }
 
-.btn {}
-
 /* Стилизирую  блок Header */
+
+/* Стилизирую блок smoothies*/
+.smoothies {
+   text-align: center;
+}
+
+.smoothies__title {
+   padding: 100px 0 0px 0;
+   color: #f7ae3b;
+   font-size: 50px;
+}
+
+.smoothies__decription {
+   padding: 60px 0 0 0;
+   color: #1e1e1e;
+   font-size: 18px;
+   max-width: 920px;
+   margin: 0 auto;
+}
+
+.features {
+   padding: 95px 0 0 0;
+   max-width: 980px;
+   margin: 0 auto;
+}
+
+.features__items {
+   display: flex;
+   justify-content: space-between;
+   flex-wrap: wrap;
+   margin: 0px -80px;
+}
+
+.features__item {
+   padding: 0px 80px;
+   margin: 50px 0 0 0;
+}
+
+
+.features__item-text {
+   padding: 35px 0 0 0;
+}
+
+/* Стилизирую блок smoothies*/
+/* Стилизирую блок about*/
+/* Стилизирую блок about*/
