--- a/css/index.css
+++ b/css/index.css
@@ -192,4 +192,107 @@ a {
 
 /* Стилизирую блок smoothies*/
 /* Стилизирую блок about*/
+.about {
+   display: flex;
+   background-color: #13876c;
+}
+
+.about__inner {
+   padding: 70px 0 0 0;
+   display: flex;
+   margin: 0 auto;
+
+}
+
+.about__image {}
+
+.about__image-item {
+   margin: 0 120px 0 0;
+}
+
+.about__description {}
+
+.about__title {
+   font-size: 55px;
+   max-width: 560pxgi;
+}
+
+.about__description-mark {
+   color: #9cca51;
+   position: relative;
+}
+
+.about__description-mark::after {
+   content: " ";
+   width: 450px;
+   height: 15px;
+   position: absolute;
+   background: url(/assets/images/About/icons/Line.png) no-repeat;
+   top: 57px;
+   left: 137px;
+
+
+
+}
+
+.about__list {
+   margin: 75px 0 0 0;
+   font-size: 21px;
+   color: rgb(255, 255, 255);
+   position: relative;
+
+}
+
+.about__list-item {
+   margin: 0 0 30px 0;
+}
+
+.about__list-item:last-child {
+   margin: 0;
+}
+
+.about__list-item:before {
+   content: '';
+   width: 60px;
+   height: 60px;
+   background: url(/assets/images/About/icons/item.png) no-repeat;
+   display: inline-block;
+   position: absolute;
+   left: 10px;
+
+
+}
+
+
+.about__btn {
+   margin: 50px 0 0px 10px;
+   font-size: 24px;
+   width: 380px;
+   height: 60px;
+   border-radius: 40px;
+   -webkit-border-radius: 40px;
+   -moz-border-radius: 40px;
+   -ms-border-radius: 40px;
+   -o-border-radius: 40px;
+   border: 4px solid #aaa247;
+   background-color: #16866b;
+   color: rgb(255, 255, 255);
+   position: relative;
+
+}
+
+.about__btn::after {
+   content: " ";
+   width: 60px;
+   height: 60px;
+   background: url(/assets/images/About/icons/Arrow.png) no-repeat;
+   display: inline-block;
+   position: absolute;
+   top: 17px;
+   right: -15px;
+
+}
+
+.btn {}
+
 /* Стилизирую блок about*/
