--- a/css/index.css
+++ b/css/index.css
@@ -1,16 +1,10 @@
 /*Body*/
-body {
-   padding: 0%;
-   margin: 0%;
-
-}
-
 /*Body*/
 /* Стили для Контейнера */
-.conteiner {
+/*.conteiner {
    max-width: 1720px;
    margin: 0 auto;
-}
+}/*
 
 /* Стили для Контейнера  */
 
@@ -23,99 +17,170 @@ header {
    background-position: center;
    background-attachment: fixed;
    height: 100vh;
-   width: 100%;
+   display: flex;
+   flex-direction: column;
+
 }
 
 .header__top {
    display: flex;
-   padding: 74px 0 0 0;
+   border: 3px solid rgb(206, 11, 11);
+   justify-content: center;
+   justify-content: space-between;
+   align-items: center;
 }
 
-.header__nav {}
-
-.menu {}
+.header__nav {
+   border: 3px solid rgb(206, 11, 11);
+}
 
 .menu__list {
    display: flex;
-   margin: 24px 250px 0 0;
-
+   border: 3px solid rgb(206, 11, 11);
 }
 
-.menu__list-item,
-li {
-   list-style-type: none;
-   padding: 0 20px 0 0;
-
-   &:last-child {
-      padding-right: 0;
-   }
+.menu__list-item {
+   padding: 0 35px 0 0;
 }
 
-.menu__list-link,
-a {
-   text-decoration: none;
+.menu__list-item:last-child {
+   padding: 0;
 }
 
 .logo {
    text-align: center;
+   border: 3px solid rgb(206, 11, 11);
 }
 
-.logo__link {}
 
-.logo__img {}
-
-.personal {}
+.header__right-block {
+   display: flex;
+   align-items: center;
+}
 
 .personal__list {
    display: flex;
-   padding: 0 136px 0px 341px;
+   border: 3px solid rgb(206, 11, 11);
+   margin: 0 121px 0 0;
+   position: relative;
+}
+
+.personal__list::after {
+   content: " ";
+   width: 47px;
+   height: 2px;
+   background-color: rgb(255, 214, 143);
+   position: absolute;
+   right: -80px;
+   top: 19px;
 }
 
 .personal__list-item {
-   padding: 0 47px 0 0;
+   border: 3px solid rgb(206, 11, 11);
+   padding: 0 45px 0 0;
 }
 
-.personal__list-link {}
-
-.social {
+.personal__list-item:last-child {
+   padding: 0;
+   position: relative;
    text-align: center;
 }
+
+.personal__list-number::after {
+   content: "0";
+   width: 18px;
+   height: 18px;
+   background-color: #fff;
+   position: absolute;
+   border-radius: 50%;
+   -webkit-border-radius: 50%;
+   -moz-border-radius: 50%;
+   -ms-border-radius: 50%;
+   -o-border-radius: 50%;
+}
+
 
 .social__list {
    display: flex;
    text-align: center;
+   border: 3px solid rgb(206, 11, 11);
 
 }
 
 .social__list-item {
-   margin: 0 11px 0 0;
-   background-color: #fff;
-   text-align: center;
-   border-radius: 50%;
-   -webkit-border-radius: ;
-   -moz-border-radius: ;
-   -ms-border-radius: ;
-   -o-border-radius: ;
-}
-
-.social__list-link {
    width: 35px;
    height: 35px;
-   line-height: 35px;
+   background-color: #fff;
+   border-radius: 50%;
+   padding: 0 11px 0 0;
+   border: 3px solid rgb(206, 11, 11);
 
+   -webkit-border-radius: 50%;
+   -moz-border-radius: 50%;
+   -ms-border-radius: 50%;
+   -o-border-radius: 50%;
+}
+
+.social__list-item:last-child {
+   padding: 0;
 }
 
 .social__list-img {
    position: relative;
-   left: 52%;
-   top: 3px;
-
+   top: 5px;
+   left: 5px;
 }
+
+.social__list-img:last-child {
+   padding: 0 8px 0 0;
+}
+
+
 
 .header__content {
-   text-align: center;
+   position: relative;
+   border: 3px solid rgb(206, 11, 11);
+   text-align: left;
 
 }
+
+.header__btn {
+   border: 4px solid #aaa247;
+   width: 280px;
+   height: 70px;
+   position: absolute;
+   top: 105px;
+   left: 50%;
+   transform: translate(-70px, 0);
+   -webkit-transform: translate(-70px, 0);
+   -moz-transform: translate(-70px, 0);
+   -ms-transform: translate(-70px, 0);
+   -o-transform: translate(-70px, 0);
+   position: relative;
+
+}
+
+.header__btn:after {
+   content: "  ";
+   width: 30px;
+   height: 16px;
+   background: url(/assets/images/background/arrow.png) no-repeat;
+   position: absolute;
+   top: 40%;
+   right: 14%;
+
+}
+
+.btn {
+
+   border-radius: 40px;
+   font-size: 24px;
+   color: rgb(255, 255, 255);
+   background-color: #16866b;
+   text-align: left;
+   padding: 0 0 0 39px;
+}
+
 
 .header__btn {
    width: 280px;
@@ -125,7 +190,6 @@ a {
    -moz-border-radius: 40px;
    -ms-border-radius: 40px;
    -o-border-radius: 40px;
-   margin: 105px 0 0 0;
    background-color: #0aa566;
    font-size: 24px;
    font-family: "Myriad Pro";
@@ -134,10 +198,10 @@ a {
 }
 
 .header__btn:after {
-   content: '';
+   content: " ";
    background-image: url(/assets/images/Background/Arrow.png);
    background-repeat: no-repeat;
-   background-position: 1 0;
+
    width: 40px;
    height: 40px;
    position: absolute;
@@ -280,17 +344,7 @@ a {
 
 }
 
-.btn {
-   border: 4px solid #aaa247;
-   border-radius: 40px;
-   font-size: 24px;
-   color: rgb(255, 255, 255);
-   background-color: #16866b;
-   margin: 50px 0 94px 10px;
 
-   width: 380px;
-   height: 60px;
-}
 
 .about__btn::after {
    content: " ";
@@ -314,6 +368,7 @@ a {
 .products__item {
    flex: 0 1 25%;
    text-align: center;
+   margin: 0;
 
 }
 
@@ -527,7 +582,7 @@ a {
 /*Стилизирую блок testimonialls*/
 /*Стилизирую Блок Blog*/
 .blog {
-   max-width: 1200px;
+   text-align: center;
    margin: 0 auto;
 }
 
@@ -540,6 +595,8 @@ a {
    display: flex;
    justify-content: space-between;
    position: relative;
+   max-width: 1200px;
+   margin: 0 auto;
 }
 
 .blog__image {
@@ -599,8 +656,7 @@ a {
 /*Стилизирую Блок Instagram*/
 .instagram {
    text-align: center;
-   margin: 203px 0 0 0;
-   500px: 980px;
+   margin: 203px auto 0 auto;
 
 
 }
@@ -629,9 +685,12 @@ a {
 }
 
 .instagram__image-item {
+   flex: 0 1 25%;
+   text-align: center;
+   margin: 0;
    position: relative;
    z-index: -10;
-   display: inline-block;
+
 }
 
 .instagram__image-item::after {
