styles for block Footer

--- a/css/index.css
+++ b/css/index.css
@@ -5,7 +5,28 @@
    max-width: 1720px;
    margin: 0 auto;
 }/*
+/* Стили для btn  */
+body {
+   max-width: 1920px;
+   margin: 0 auto;
+}
 
+.btn {
+   border-radius: 40px;
+   font-size: 24px;
+   color: rgb(255, 255, 255);
+   background-color: #16866b;
+   text-align: left;
+   padding: 0 0 0 39px;
+}
+
+.btn:hover {
+   box-shadow: 1px 3px 1px #1e1e1e;
+   background-color: rgb(220, 20, 60);
+   border: none;
+}
+
+/* Стили для btn  */
 /* Стили для Контейнера  */
 
 /* Стилизирую  блок Header */
@@ -145,7 +166,7 @@ header {
 }
 
 .header__btn {
-   border: 4px solid #aaa247;
+   border: 4px solid rgb(10, 165, 102);
    width: 280px;
    height: 70px;
    position: absolute;
@@ -171,17 +192,6 @@ header {
 
 }
 
-.btn {
-
-   border-radius: 40px;
-   font-size: 24px;
-   color: rgb(255, 255, 255);
-   background-color: #16866b;
-   text-align: left;
-   padding: 0 0 0 39px;
-}
-
-
 .header__btn {
    width: 280px;
    height: 70px;
@@ -201,7 +211,6 @@ header {
    content: " ";
    background-image: url(/assets/images/Background/Arrow.png);
    background-repeat: no-repeat;
-
    width: 40px;
    height: 40px;
    position: absolute;
@@ -214,12 +223,14 @@ header {
 /* Стилизирую блок smoothies*/
 .smoothies {
    text-align: center;
+   border: 3px solid rgb(206, 11, 11);
+   margin: 100px 0 0px 0;
 }
 
 .smoothies__title {
-   padding: 100px 0 0px 0;
    color: #f7ae3b;
    font-size: 50px;
+   border: 3px solid rgb(206, 11, 11);
 }
 
 .smoothies__decription {
@@ -228,30 +239,34 @@ header {
    font-size: 18px;
    max-width: 920px;
    margin: 0 auto;
+   border: 3px solid rgb(206, 11, 11);
+
 }
 
 .features {
    padding: 95px 0 0 0;
-   max-width: 980px;
-   margin: 0 auto;
+   border: 3px solid rgb(206, 11, 11);
+
 }
 
 .features__items {
-   display: flex;
-   justify-content: space-between;
-   flex-wrap: wrap;
-   margin: 0px -80px;
+   display: grid;
+   grid-template-columns: repeat(4, 250px);
+   grid-template-rows: repeat(2, 1fr);
+   border: 3px solid rgb(206, 11, 11);
+   justify-content: center;
+   align-items: center;
+   row-gap: 40px;
+   column-gap: 10px;
+
 }
 
 .features__item {
-   padding: 0px 80px;
-   margin: 50px 0 0 0;
+   border: 3px solid rgb(206, 11, 11);
 }
 
 
-.features__item-text {
-   padding: 35px 0 0 0;
-}
+.features__item-text {}
 
 /* Стилизирую блок smoothies*/
 /* Стилизирую блок about*/
@@ -259,24 +274,32 @@ header {
 .about {
    padding: 70px 0 0 0;
    display: flex;
-   width: 1920px;
-   margin: 0 auto;
+   justify-content: center;
    position: relative;
    background-color: #13876c;
+   max-width: 1920px;
 }
 
 .about__image-wrap {
    flex: 0 1 50%;
+   border: 3px solid rgb(206, 11, 11);
+
 }
 
 .about__image {
    position: absolute;
    top: 180px;
-   left: 200px;
+   left: 180px;
+   object-fit: cover;
 }
 
 .about__description {
-   margin: 0px 0 0 0px;
+   flex: 0 1 50%;
+   border: 3px solid rgb(206, 11, 11);
+   padding: 0px 0 0 40px;
+   display: flex;
+   flex-direction: column;
+   justify-content: space-around;
 }
 
 .about__title {
@@ -322,7 +345,7 @@ header {
    background: url(/assets/images/About/icons/item.png) no-repeat;
    display: inline-block;
    position: absolute;
-   left: 10px;
+   left: -34px;
 
 
 }
@@ -330,18 +353,15 @@ header {
 
 .about__btn {
    margin: 50px 0 94px 10px;
-
    width: 380px;
    height: 60px;
-
    -webkit-border-radius: 40px;
    -moz-border-radius: 40px;
    -ms-border-radius: 40px;
    -o-border-radius: 40px;
-
-
    position: relative;
-
+   border: 3px solid rgb(248, 178, 49);
+   line-height: 51px;
 }
 
 
@@ -362,11 +382,10 @@ header {
 
 .products__items {
    display: flex;
-
 }
 
 .products__item {
-   flex: 0 1 25%;
+   flex: 1 1 25%;
    text-align: center;
    margin: 0;
 
@@ -445,23 +464,34 @@ header {
 
 .story__description {
    padding: 140px 0 0 0;
+   border: 3px solid rgb(206, 11, 11);
+
 
 }
 
 .story__description-title {
    font-size: 50px;
    color: #f7ae3b;
+   border: 3px solid rgb(206, 11, 11);
+
 }
 
 .story__description-text {
    font-size: 18px;
    padding: 95px 0 0 0;
    max-width: 500px;
+   border: 3px solid rgb(206, 11, 11);
+
 }
 
 .story__description-btn {
    background-color: #0aa566;
    position: relative;
+   width: 301px;
+   height: 60px;
+   border: 2px solid #ffffff;
+   margin-top: 60px;
+
 }
 
 .story__description-btn:after {
@@ -473,9 +503,6 @@ header {
    display: inline-block;
    top: 20px;
    right: 20px;
-
-
-
 
 }
 
@@ -522,7 +549,6 @@ header {
 .testimonials__title {
    font-size: 50px;
    color: #f7ae3b;
-
 }
 
 .testimonials__title-word {
@@ -548,7 +574,6 @@ header {
    font-size: 200px;
    color: #59210f;
    z-index: -1;
-
 }
 
 .testimonials__comment {
@@ -582,8 +607,9 @@ header {
 /*Стилизирую блок testimonialls*/
 /*Стилизирую Блок Blog*/
 .blog {
-   text-align: center;
-   margin: 0 auto;
+   max-width: 1200px;
+   text-align: left;
+   margin: 100px auto 0 auto;
 }
 
 .blog__title {
@@ -600,7 +626,7 @@ header {
 }
 
 .blog__image {
-   padding: 0 30px 0 0;
+   padding: 50px 30px 0 0;
 }
 
 .blog__description {
@@ -611,7 +637,6 @@ header {
    margin: 134px 0 0 0;
    color: #f2612d;
    font-size: 30px;
-
 }
 
 .blog__description-title::after {
@@ -632,7 +657,6 @@ header {
    margin: 50px 0 0 65px;
    font-size: 18px;
    max-width: 412px;
-
 }
 
 .blog__description-text-link {
@@ -657,8 +681,6 @@ header {
 .instagram {
    text-align: center;
    margin: 203px auto 0 auto;
-
-
 }
 
 .instagram__user-link {
@@ -677,20 +699,19 @@ header {
    background: url(/assets/images/instagram/icon.png) no-repeat;
    top: 1px;
    left: -38px;
-
 }
 
 .instagram__image-items {
    display: flex;
+   margin: 45px 0 0 0;
 }
 
 .instagram__image-item {
-   flex: 0 1 25%;
+   flex: 1 1 25%;
    text-align: center;
    margin: 0;
    position: relative;
    z-index: -10;
-
 }
 
 .instagram__image-item::after {
@@ -710,5 +731,206 @@ header {
    display: inline-block;
 }
 
-
 /*Стилизирую Блок Instagram*/
+/*Стилизирую Блок Footer*/
+.footer {}
+
+.title {
+   border: 3px solid rgb(206, 11, 11);
+   font-size: 26px;
+   line-height: 40px;
+   color: rgb(255, 255, 255);
+}
+
+.footer-top {
+   border: 3px solid rgb(206, 11, 11);
+   display: flex;
+   background-color: rgb(243, 143, 56);
+   justify-content: space-around;
+   padding: 80px 0 95px 0;
+}
+
+.footer-logo {
+   width: 207px;
+   height: 68px;
+}
+
+.logo__link {}
+
+.logo__link-image {}
+
+.information {
+   border: 3px solid rgb(206, 11, 11);
+   color: rgb(255, 255, 255);
+}
+
+.information__title {}
+
+.information__list {
+   border: 3px solid rgb(206, 11, 11);
+   margin-top: 40px;
+
+}
+
+.linformation__list-item {
+   border: 3px solid rgb(206, 11, 11);
+   padding-bottom: 10px;
+
+}
+
+.linformation__list-link {
+   font-size: 18px;
+   line-height: 35px;
+   color: #6d450c;
+
+}
+
+.linformation__list-item:last-child {
+   padding-bottom: 0px;
+}
+
+.payment {
+   max-width: 236px;
+}
+
+.payment__title {}
+
+.payment__image-wrap {
+   margin-top: 35px;
+}
+
+.payment__image {
+   border: 3px solid rgb(206, 11, 11);
+   margin-bottom: 29px;
+}
+
+.subscription {}
+
+.subscription__title {}
+
+.subscription__input {
+   margin-top: 35px;
+   width: 495px;
+   height: 61px;
+
+   -webkit-border-radius: 40px;
+   -moz-border-radius: 40px;
+   -ms-border-radius: 40px;
+   -o-border-radius: 40px;
+   padding: 5px 46px 3px 59px;
+   height: 60px;
+   border-radius: 40px;
+}
+
+
+.input-icon {
+   position: relative;
+   top: -39px;
+   left: 18px;
+}
+
+
+::-webkit-input-placeholder {
+   color: #6d450c;
+   font-size: 20px;
+}
+
+::-moz-placeholder {
+   color: #6d450c;
+   font-size: 17px;
+}
+
+/* Firefox 19+ */
+:-moz-placeholder {
+   color: #6d450c;
+   font-size: 17px;
+}
+
+/* Firefox 18- */
+:-ms-input-placeholder {
+   color: #6d450c;
+   font-size: 17px;
+}
+
+.footer-social {
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   justify-content: space-between;
+   max-width: 220px;
+   margin: 28px 0 0 185px;
+
+}
+
+.footer-social__title {
+   position: relative;
+
+
+}
+
+.footer-social__title::before {
+   content: " ";
+   width: 48px;
+   height: 48px;
+   background: url(/assets/images/subscribe/arrow-botton.png) no-repeat;
+   position: absolute;
+   top: -26px;
+   left: -66px;
+}
+
+.footer-social__list {
+   display: flex;
+
+}
+
+.footer-social__list-item {
+   padding-right: 16px;
+}
+
+.footer-social__list-item:last-child {
+   padding: 0px;
+}
+
+.social__list-img {}
+
+.footer__bottom {
+   background-color: rgb(113, 48, 28);
+   max-height: 61px;
+   text-align: center;
+   position: relative;
+}
+
+.footer__botton-text {
+   font-size: 13px;
+   line-height: 35px;
+   color: rgb(166, 126, 116);
+}
+
+.hug::before {
+   content: " Go top";
+   color: rgb(255, 255, 255);
+   position: absolute;
+   right: 116px;
+   top: 14px;
+
+}
+
+.hug__link {
+   background-color: rgb(242, 102, 47);
+   width: 50px;
+   height: 50px;
+   display: inline-block;
+   position: absolute;
+   right: 50px;
+   top: -29px;
+
+}
+
+.hug__link-img {
+   position: absolute;
+   right: 18px;
+   top: 14px;
+
+}
+
+/*Стилизирую Блок Footer*/
