--- a/css/index.css
+++ b/css/index.css
@@ -27,20 +27,11 @@
    font-family: 'Muli-Regular';
    src: url('../assets/fonts/Muli-Regular.eot');
    src: local('☺'), url('../assets/fonts/Muli-Regular.woff') format('woff'), url('../assets/fonts/Muli-Regular.ttf') format('truetype'), url('../assets/fonts/Muli-Regular.svg') format('svg');
-   font-weight: normal;
+   font-weight: 400;
    font-style: normal;
 }
 
-
-
-
-/*Подключаемые шрифты*/
-body {
-   max-width: 1920px;
-   margin: 0 auto;
-   font-family: 'Muli-Regular';
-}
-
+/*btn*/
 .btn {
    border-radius: 40px;
    font-size: 24px;
@@ -48,6 +39,10 @@ body {
    background-color: #16866b;
    text-align: left;
    padding: 0 0 0 39px;
+   -webkit-border-radius: 40px;
+   -moz-border-radius: 40px;
+   -ms-border-radius: 40px;
+   -o-border-radius: 40px;
 }
 
 .btn:hover {
@@ -56,207 +51,330 @@ body {
    background-color: rgb(242, 102, 47);
 }
 
-
-/* Стили для btn  */
-/* Стили для титульника  */
+/*btn*/
 
 
-/* Стили для титульника  */
+/*Подключаемые шрифты*/
 
 /* Стилизирую  блок Header */
-
 .header {
-   background-image: url(/assets/images/Background/header-bg-img.jpg);
-   background-repeat: no-repeat;
+   max-width: 2000px;
+   height: 100vh;
+   background: url(/assets/images/background/header-bg-img.jpg);
    background-size: cover;
    background-position: center;
-   background-attachment: fixed;
-   height: 100vh;
-   display: flex;
-   flex-direction: column;
+   background-repeat: no-repeat;
 }
 
-.header__top {
+.conteiner {
+   max-width: 1900px;
+   margin: 0 auto;
+   padding: 0 10px;
+
+}
+
+.header__body {
+   position: relative;
+   padding: 69px 0 0 0;
+}
+
+.header__novigation {
    display: flex;
-   justify-content: center;
    justify-content: space-between;
    align-items: center;
-   margin: 69px 0 0 0;
 }
+
+.header__left {}
 
 .menu__list {
    display: flex;
-
 }
 
 .menu__list-item {
-   padding: 0 35px 0 0;
-   font-family: 'Muli-Bold';
-   line-height: 40px;
-   letter-spacing: 0, 32;
-   color: rgb(255, 255, 255);
-   text-align: center;
+   padding: 0 20px 0 0;
 }
 
 .menu__list-link {
-   font-family: 'Muli-Bold';
-   line-height: 40px;
-   letter-spacing: 0, 32;
-   color: rgb(255, 255, 255);
+   font-size: 16px;
+   line-height: 2.5;
+   letter-spacing: 0.32px;
+   color: #ffffff;
+   text-transform: uppercase;
+
 }
 
-.menu__list-link:hover {
-   box-shadow: 0 5px 0 rgb(10, 165, 102);
-}
-
-.menu__list-item:last-child {
-   padding: 0;
-}
-
-.logo {
-   text-align: center;
-
-   margin: 0 344px 0 211px;
-}
-
-
-.header__right-block {
+.header__right {
    display: flex;
    align-items: center;
+
+}
+
+.personal {
+   position: relative;
+}
+
+.personal::after {
+   content: " ";
+   width: 47px;
+   height: 2px;
+   background-color: #ffd68f;
+   position: absolute;
+   top: 12px;
+   right: 41px;
+
 }
 
 .personal__list {
    display: flex;
-   margin: 0 121px 0 0;
-   position: relative;
-}
-
-.personal__list::after {
-   content: " ";
-   width: 47px;
-   height: 2px;
-   background-color: rgb(255, 214, 143);
-   position: absolute;
-   right: -80px;
-   top: 19px;
 }
 
 .personal__list-item {
-   padding: 0 45px 0 0;
+   margin: 0 45px 0 0;
 }
 
-.personal__list-item:last-child {
-   padding: 0;
+.personal__list-item--numb {
+   margin-right: 136px;
+}
+
+.personal__list-item--numb {
    position: relative;
-   text-align: center;
 }
 
-
-
-.personal__list-number::after {
+.personal__list-item--numb::after {
    content: "0";
    width: 18px;
    height: 18px;
-   background-color: #fff;
-   position: absolute;
+   background-color: #ffffff;
    border-radius: 50%;
+   position: absolute;
+   top: -10px;
+   right: -18px;
    -webkit-border-radius: 50%;
    -moz-border-radius: 50%;
    -ms-border-radius: 50%;
    -o-border-radius: 50%;
+   text-align: center;
 }
 
 .social__list {
    display: flex;
-   text-align: center;
-
 }
 
 .social__list-item {
-   width: 35px;
-   height: 35px;
-   background-color: #fff;
-   border-radius: 50%;
-   margin: 0 11px 0 0;
-   -webkit-border-radius: 50%;
-   -moz-border-radius: 50%;
-   -ms-border-radius: 50%;
-   -o-border-radius: 50%;
+   margin: 0 30px 0 0;
 }
-
-
 
 .social__list-item:last-child {
    margin: 0;
 }
 
+.social__list-link {
+   width: 35px;
+   height: 35px;
+   line-height: 35px;
+   background-color: #ffffff;
+   border-radius: 50%;
+   display: inline-block;
+   text-align: center;
+   -webkit-border-radius: 50%;
+   -moz-border-radius: 50%;
+   -ms-border-radius: 50%;
+   -o-border-radius: 50%;
+}
+
 .social__list-img {
-   position: relative;
-   top: 8px;
-   left: 8px;
+   padding-top: 7px;
 }
 
-.social__list-img:last-child {
-   padding: 0 15px 0 0;
+.logo {
+   position: absolute;
+   top: 65px;
+   left: 50%;
+   transform: translate(-50%);
+   -webkit-transform: translate(-50%);
+   -moz-transform: translate(-50%);
+   -ms-transform: translate(-50%);
+   -o-transform: translate(-50%);
 }
 
-.header__content {
-   position: relative;
-   text-align: left;
+.logo__img {
+   max-width: 100%;
+}
 
+.header__shop {
+   position: absolute;
+   top: 246px;
+   left: 50%;
+   transform: translate(-50%);
+   -webkit-transform: translate(-50%);
+   -moz-transform: translate(-50%);
+   -ms-transform: translate(-50%);
+   -o-transform: translate(-50%);
 }
 
 .header__btn {
-   border: 4px solid rgb(10, 165, 102);
    width: 280px;
    height: 70px;
-   position: absolute;
-   top: 105px;
-   left: 47%;
-   transform: translate(-70px, 0);
-   -webkit-transform: translate(-70px, 0);
-   -moz-transform: translate(-70px, 0);
-   -ms-transform: translate(-70px, 0);
-   -o-transform: translate(-70px, 0);
+   /*текст*/
+   font-size: 24px;
+   line-height: 1.67;
+   letter-spacing: -0.48px;
+   color: #ffffff;
+   text-align-last: left;
    position: relative;
-
+   border-style: none;
 }
 
-.header__btn:after {
-   content: "  ";
+.header__btn::after {
+   content: " ";
    width: 30px;
    height: 16px;
    background: url(/assets/images/background/arrow.png) no-repeat;
    position: absolute;
-   top: 40%;
-   right: 14%;
+   top: 27px;
+   right: 27px;
 
 }
 
-.header__btn {
-   width: 280px;
-   height: 70px;
-   border-radius: 40px;
-   -webkit-border-radius: 40px;
-   -moz-border-radius: 40px;
-   -ms-border-radius: 40px;
-   -o-border-radius: 40px;
-   background-color: #0aa566;
-   font-size: 24px;
-   font-family: "Myriad Pro";
-   color: rgb(255, 255, 255);
-   position: relative;
-}
+@media (max-width: 1027px) {
+   .header__body {
+      padding: 30px 0 0 0;
+   }
 
-.header__btn:after {
-   content: " ";
-   background-image: url(/assets/images/Background/Arrow.png);
-   background-repeat: no-repeat;
-   width: 40px;
-   height: 40px;
-   position: absolute;
-   top: 39%;
-   right: 40px;
+   .burger__menu {
+      position: fixed;
+      top: 35px;
+      left: 20px;
+      display: block;
+      width: 30px;
+      height: 20px;
+      cursor: pointer;
+      z-index: 2;
+   }
+
+   .burger__menu.active::before {
+      transform: rotate(45deg);
+      -webkit-transform: rotate(45deg);
+      -moz-transform: rotate(45deg);
+      -ms-transform: rotate(45deg);
+      -o-transform: rotate(45deg);
+      top: 9px;
+   }
+
+   .burger__menu.active::after {
+      transform: rotate(-45deg);
+      -webkit-transform: rotate(-45deg);
+      -moz-transform: rotate(-45deg);
+      -ms-transform: rotate(-45deg);
+      -o-transform: rotate(-45deg);
+      bottom: 9px;
+   }
+
+
+
+   .burger__span {
+      width: 100%;
+      height: 2px;
+      background-color: #fff;
+      position: absolute;
+      left: 0;
+      top: 9px;
+      transition: all 0.3s ease 0s;
+      -webkit-transition: all 0.3s ease 0s;
+      -moz-transition: all 0.3s ease 0s;
+      -ms-transition: all 0.3s ease 0s;
+      -o-transition: all 0.3s ease 0s;
+   }
+
+   .burger__menu.active span {
+      display: none;
+   }
+
+   .burger__menu::before,
+   .burger__menu::after {
+      content: " ";
+      width: 100%;
+      height: 2px;
+      position: absolute;
+      left: 0;
+      background-color: #fff;
+   }
+
+   .burger__menu::before {
+      top: 0;
+   }
+
+   .burger__menu::after {
+      bottom: 0;
+   }
+
+   .header__novigation {
+      flex-direction: column-reverse;
+      position: fixed;
+      top: -100%;
+      left: 0;
+      width: 100%;
+      height: 100vh;
+      background-color: #6c2c1c;
+      transition: all 0.3s ease 0s;
+      -webkit-transition: all 0.3s ease 0s;
+      -moz-transition: all 0.3s ease 0s;
+      -ms-transition: all 0.3s ease 0s;
+      -o-transition: all 0.3s ease 0s;
+   }
+
+   .header__novigation.active {
+      top: 0;
+   }
+
+   .header__right {
+      padding-top: 40px;
+   }
+
+   .header__left {
+      padding-bottom: 178px;
+   }
+
+   .personal__list-item--numb {
+      margin-right: 100px;
+   }
+
+   .personal::after {
+      display: none;
+   }
+
+
+   .menu__list {
+      flex-direction: column;
+      text-align: center;
+   }
+
+   .menu__list-link {
+      font-size: 20px;
+   }
+
+   .logo {
+      top: 100px;
+
+   }
+
+   .header__btn {
+      width: 280px;
+      height: 70px;
+      /*текст*/
+      font-size: 24px;
+      line-height: 1.67;
+      letter-spacing: -0.48px;
+      color: #ffffff;
+      text-align-last: left;
+      position: relative;
+   }
+
+   .header__shop {
+
+      top: 530px;
+
+   }
 }
 
 /* Стилизирую  блок Header */
@@ -843,6 +961,7 @@ body {
    line-height: 35px;
    letter-spacing: -0, 52;
    padding-bottom: 44px;
+   color: #fff;
 
 }
 
@@ -913,8 +1032,9 @@ body {
    padding: 5px 46px 3px 59px;
    height: 60px;
    border-radius: 40px;
-}
+   border-style: none;
 
+}
 
 .input-icon {
    position: relative;
@@ -1056,3 +1176,9 @@ body {
 }
 
 /*Стилизирую Блок Footer*/
+/*Работа с медиазапросами*/
+
+/*Работа с медиазапросами*/
+
+
+/* кнопки  */
