--- a/css/index.css
+++ b/css/index.css
@@ -58,7 +58,6 @@
 
 /* Стилизирую  блок Header */
 .header {
-   max-width: 2000px;
    height: 100vh;
    background: url(/assets/images/background/header-bg-img.jpg);
    background-size: cover;
@@ -67,7 +66,7 @@
 }
 
 .conteiner {
-   max-width: 1900px;
+   max-width: 1200px;
    margin: 0 auto;
    padding: 0 10px;
 
@@ -83,8 +82,6 @@
    justify-content: space-between;
    align-items: center;
 }
-
-.header__left {}
 
 .menu__list {
    display: flex;
@@ -236,7 +233,11 @@
 
 }
 
-@media (max-width: 1027px) {
+@media (max-width: 1024px) {
+   body.lock {
+      overflow: hidden;
+   }
+
    .header__body {
       padding: 30px 0 0 0;
    }
@@ -275,7 +276,7 @@
    .burger__span {
       width: 100%;
       height: 2px;
-      background-color: #fff;
+      background-color: rgb(24, 252, 4);
       position: absolute;
       left: 0;
       top: 9px;
@@ -297,7 +298,7 @@
       height: 2px;
       position: absolute;
       left: 0;
-      background-color: #fff;
+      background-color: rgb(24, 252, 4);
    }
 
    .burger__menu::before {
@@ -347,6 +348,7 @@
    .menu__list {
       flex-direction: column;
       text-align: center;
+      overflow: auto;
    }
 
    .menu__list-link {
@@ -397,8 +399,9 @@
    color: #1e1e1e;
    font-size: 18px;
    max-width: 915px;
-   margin: 0 auto;
    line-height: 35px;
+   padding: 0 20px;
+   margin: 0 auto;
 }
 
 .features {
@@ -416,46 +419,74 @@
    column-gap: 10px;
 }
 
+
 .features__item-text {
    color: #f2612d;
    font-size: 25px;
    font-family: 'Muli-ExtraBold';
    margin: 31px 0 0 0;
+}
 
+@media (max-width: 1027px) {
+   .smoothies__title {
+      margin: 30px 0 20px 0;
+      line-height: 30px;
+      font-size: 40px;
+   }
+
+   .features {
+      padding: 20px 0 0 0;
+      margin-bottom: 100px;
+   }
+
+   .features__items {
+      display: grid;
+      grid-template-columns: repeat(3, 229.33px);
+      grid-template-rows: repeat(3, 1fr);
+      justify-content: center;
+      align-items: center;
+      row-gap: 12px;
+      column-gap: 0px;
+   }
+
+   .features__item-text {
+      font-size: 20px;
+      margin: 20px 0 0 0;
+   }
 }
 
 /* Стилизирую блок smoothies*/
 /* Стилизирую блок about*/
 
 .about {
-
-
    justify-content: center;
    position: relative;
    background-color: #13876c;
 
 }
 
-.about__conteiner {
-   max-width: 1421px;
-   margin: 0 auto;
+.about__body {
    display: flex;
    padding: 70px 0 0 0;
 }
 
 .about__image-wrap {
    flex: 0 1 50%;
+   position: relative;
 
 }
 
 .about__image {
+   max-width: 691px;
+   max-height: 818px;
    position: absolute;
-   top: 103px;
-   left: 124px;
-   object-fit: cover;
+   top: 27px;
+   right: 52px;
+
 }
 
 .about__description {
+
    flex: 0 1 50%;
    padding: 0px 0 0 40px;
    display: flex;
@@ -464,8 +495,7 @@
 }
 
 .about__title {
-   font-size: 55px;
-   max-width: 560px;
+   width: 614px;
    color: #ffffff;
    font-family: 'Muli-ExtraBold';
    font-size: 50px;
@@ -473,17 +503,16 @@
 
 .about__description-mark {
    color: #9cca51;
-   position: relative;
 }
 
 .about__description-mark::after {
    content: " ";
    width: 450px;
    height: 15px;
-   position: absolute;
+   display: block;
    background: url(/assets/images/About/icons/Line.png) no-repeat;
-   top: 57px;
-   left: 165px;
+   /* top: 57px;
+   left: 165px; */
 }
 
 .about__list {
@@ -532,8 +561,6 @@
    font-size: 21px;
 }
 
-
-
 .about__btn::after {
    content: " ";
    width: 60px;
@@ -543,6 +570,36 @@
    position: absolute;
    top: 17px;
    right: -15px;
+}
+
+@media (max-width: 1027px) {
+   .about__body {
+      padding: 30px 0 0 0;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+   }
+
+   .about__title {
+      margin-top: 20px;
+      width: 550px;
+      color: #ffffff;
+      font-family: 'Muli-ExtraBold';
+      font-size: 45px;
+   }
+
+   .about__image {
+      position: static;
+      max-width: 612px;
+      max-height: 710px;
+      top: 106px;
+      right: 33px;
+   }
+
+   .about__list {
+      margin: 40px 0 0 7px;
+      font-size: 26px;
+   }
 }
 
 /* Стилизирую блок about*/
@@ -562,13 +619,9 @@
 
 }
 
-.products__item--purpure {
-   background-color: #652c18;
-}
-
+.products__item--purpure,
 .products__item-btn--purpure {
    background-color: #652c18;
-
 }
 
 .products__item--green,
@@ -623,24 +676,43 @@
    position: absolute;
    top: 20px;
    right: 7px;
+}
 
+@media (max-width: 1027px) {
+   .products__items {
+      flex-wrap: wrap;
+   }
+
+   .products__item {
+      flex: 1 1 50%;
+      font-size: 27px;
+   }
+
+   .products__item-image {
+      padding: 60px 0 0 0;
+   }
+
+   .products__item-title {
+      padding: 40px 0 0 0;
+   }
+
+   .products__item-btn {
+      margin: 40px 0 40px 0;
+   }
 }
 
 /* Стилизирую блок products*/
 /*Стилизирую блок Story*/
-.story {
 
-   width: 1300px;
-   margin: 0 auto;
+.story__body {
    display: flex;
    align-items: center;
    justify-content: space-between;
+   text-align: center;
 }
 
 .story__description {
-   padding: 140px 0 0 0;
-
-
+   padding: 140px 170px 0 0px;
 }
 
 .story__description-title {
@@ -679,15 +751,13 @@
    display: inline-block;
    top: 20px;
    right: 20px;
-
 }
-
 
 .story__image-wrap {
    position: relative;
    margin: 125px 0 0 0;
    padding-bottom: 160px;
-
+   width: 100%;
 }
 
 .story__image-wrap:before {
@@ -708,11 +778,43 @@
    background: url(/assets/images/story/Dots.png) no-repeat;
    display: inline-block;
    position: absolute;
-   bottom: -217px;
-   right: -257px;
+   bottom: -195px;
+   right: -208px;
+   ;
 }
 
+@media (max-width: 1027px) {
+   .story__body {
+      flex-direction: column;
+      align-items: center;
+   }
 
+   .story__description {
+      padding: 28px 0 0 0;
+   }
+
+   .story__description-title {
+      padding-bottom: 20px;
+   }
+
+   .story__image-wrap {
+      position: relative;
+      margin: 50px 0 0 0;
+      padding-bottom: 30px;
+   }
+
+   .story__image-wrap:before {
+      display: none;
+   }
+
+   .story__image-wrap:after {
+      display: none;
+   }
+
+   .story__description-btn {
+      margin-top: 30px;
+   }
+}
 
 /*Стилизирую блок Story*/
 
@@ -736,11 +838,11 @@
 }
 
 .testimonials__inner {
-   max-width: 730px;
+   max-width: 820px;
    margin: 0 auto;
    display: flex;
    justify-content: space-between;
-   padding: 130px 0 0 0;
+   padding: 118px 0 0 0;
    position: relative;
    z-index: 2;
 }
@@ -748,8 +850,9 @@
 .testimonials__inner::after {
    content: "Sarah A";
    position: absolute;
-   top: 145px;
-   left: -186px;
+   display: block;
+   top: 150px;
+   left: -118px;
    font-size: 200px;
    color: #59210f;
    z-index: -1;
@@ -763,10 +866,7 @@
    max-width: 455px;
    color: rgb(255, 255, 255);
    line-height: 35px;
-
 }
-
-.comment-qoute {}
 
 .comment-author {
    padding: 40px 0 0 0;
@@ -784,6 +884,39 @@
    display: flex;
    margin: 0 auto;
    justify-content: space-between;
+}
+
+@media (max-width: 1027px) {
+   .testimonials__title {
+      padding-top: 50px;
+      font-size: 43px;
+      line-height: 0px;
+   }
+
+   .testimonials__title-word {
+      font-size: 50px;
+   }
+
+   .testimonials__inner {
+      max-width: 700px;
+      padding: 58px 0 0 0;
+
+      flex-direction: column-reverse;
+      align-items: center;
+   }
+
+   .testimonials__inner::after {
+      display: none;
+   }
+
+   .testimonials__comment {
+      padding: 38px 0 0 0;
+   }
+
+   .arrows {
+      padding: 62px 0 54px 0;
+      max-width: 120px;
+   }
 }
 
 /*Стилизирую блок testimonialls*/
@@ -811,7 +944,6 @@
    margin-bottom: 202px;
 }
 
-.blog__image {}
 
 .blog__description {
    text-align: left;
@@ -872,6 +1004,47 @@
    left: 103px;
 }
 
+@media (max-width: 1027px) {
+   .blog {
+      text-align: center;
+   }
+
+   .blog__title {
+      padding: 20px 0 0 0;
+   }
+
+   .blog__description-title {
+      margin: 40px 0 14px 0px;
+   }
+
+   .blog__description-title::after {
+      display: none;
+   }
+
+   .blog__description-date {
+      font-size: 16px;
+      line-height: 35px;
+      margin-bottom: 10px;
+   }
+
+   .blog__description-text {
+      margin: 0;
+      font-size: 18px;
+      max-width: 510px;
+      line-height: 35px;
+      text-align: left;
+   }
+
+   .blog__inner {
+      flex-direction: column-reverse;
+      position: relative;
+      max-width: 1200px;
+      margin: 0 auto;
+      align-items: center;
+      margin-bottom: 50px;
+   }
+}
+
 /*Стилизирую Блок Blog*/
 /*Стилизирую Блок Instagram*/
 .instagram {
@@ -902,6 +1075,7 @@
 .instagram__image-items {
    display: flex;
    margin: 45px 0 0 0;
+
 }
 
 .instagram__image-item {
@@ -929,18 +1103,31 @@
    display: inline-block;
 }
 
+@media (max-width: 1027px) {
+   .instagram__image-items {
+      display: flex;
+      flex-wrap: wrap;
+      margin: 20px 0 0 0;
+      justify-content: center;
+   }
+
+   .instagram__image-item {
+      flex: 0 1 50%;
+
+   }
+}
+
 /*Стилизирую Блок Instagram*/
 /*Стилизирую Блок Footer*/
 .footer {}
 
-
-
 .footer-top {
    display: flex;
+   justify-content: center;
+   align-items: center;
    background-color: rgb(243, 143, 56);
    justify-content: space-around;
    padding: 79px 0 93px 0;
-
 }
 
 .footer-logo {
@@ -949,18 +1136,14 @@
    padding-top: 54px;
 }
 
-.logo__link {}
 
-.logo__link-image {}
-
-.information {}
 
 .information__title {
    font-family: 'Muli-ExtraBold';
    font-size: 26px;
-   line-height: 35px;
+   line-height: 0px;
    letter-spacing: -0, 52;
-   padding-bottom: 44px;
+   padding-bottom: 40px;
    color: #fff;
 
 }
@@ -1173,6 +1356,47 @@
 .hug__arrow-img {
    vertical-align: center;
    padding-top: 12px;
+}
+
+@media(max-width:1027px) {
+   .footer-top {
+      display: flex;
+      flex-wrap: wrap;
+      align-items: center;
+      padding: 20px 0 10px 0;
+   }
+
+   .footer-logo {
+      display: none;
+   }
+
+   .payment__image-wrap {
+      display: flex;
+      flex-wrap: wrap;
+   }
+
+   .payment__image {
+
+      text-align: center;
+      margin: 2px;
+   }
+
+   .subscription {
+      padding-top: 30px;
+   }
+
+   .subscription__title {
+      font-family: 'Muli-ExtraBold';
+      font-size: 26px;
+      line-height: 35px;
+      letter-spacing: -0, 52;
+      padding: 20px 0 17px 0;
+      color: rgb(255, 255, 255);
+   }
+
+   .footer-social {
+      max-width: 220px;
+   }
 }
 
 /*Стилизирую Блок Footer*/
