--- a/css/index.css
+++ b/css/index.css
@@ -250,7 +250,8 @@
       width: 30px;
       height: 20px;
       cursor: pointer;
-      z-index: 2;
+      z-index: 20;
+
    }
 
    .burger__menu.active::before {
@@ -276,7 +277,7 @@
    .burger__span {
       width: 100%;
       height: 2px;
-      background-color: rgb(24, 252, 4);
+      background-color: rgb(4, 173, 252);
       position: absolute;
       left: 0;
       top: 9px;
@@ -298,7 +299,7 @@
       height: 2px;
       position: absolute;
       left: 0;
-      background-color: rgb(24, 252, 4);
+      background-color: rgb(4, 173, 252);
    }
 
    .burger__menu::before {
@@ -322,6 +323,7 @@
       -moz-transition: all 0.3s ease 0s;
       -ms-transition: all 0.3s ease 0s;
       -o-transition: all 0.3s ease 0s;
+      z-index: 10;
    }
 
    .header__novigation.active {
@@ -837,27 +839,79 @@
    color: #f2612d;
 }
 
-.testimonials__inner {
+.testimonials__slider {
+   min-width: 0;
+}
+
+/* Слайдер */
+.slick-slider {
+   min-width: 0;
+}
+
+/* Ограничивающая оболочка */
+.slick-list {
+   overflow: hidden;
+}
+
+/* Лента слайдов */
+.slick-track {
+   display: flex;
+   align-items: flex-start;
+}
+
+.slider {
+   position: relative;
+   padding: 0px 60px;
+}
+
+.slider .slick-arrow {
+   position: absolute;
+   bottom: 3%;
+   margin: -33px 15px 0px 15px;
+   z-index: 10;
+   font-size: 0;
+   width: 30px;
+   height: 20px;
+
+}
+
+.slider .slick-arrow.slick-prev {
+
+   left: 45%;
+   background: url('/assets/images/testimonials/arrow-left .png') 0 0 / 100% no-repeat;
+}
+
+.slider .slick-arrow.slick-next {
+   right: 45%;
+   background: url('/assets/images/testimonials/arrow-right .png') 0 0 / 100% no-repeat;
+}
+
+.slider .slick-arrow.slick-disabled {
+   opacity: 0.2;
+}
+
+.testimonials__slider-item {
    max-width: 820px;
    margin: 0 auto;
    display: flex;
    justify-content: space-between;
-   padding: 118px 0 0 0;
+   padding: 118px 0 100px 0;
    position: relative;
    z-index: 2;
 }
 
-.testimonials__inner::after {
+.testimonials__slider-item::after {
    content: "Sarah A";
    position: absolute;
    display: block;
-   top: 150px;
-   left: -118px;
-   font-size: 200px;
+   top: 139px;
+   left: -96px;
+   font-size: 164px;
    color: #59210f;
    z-index: -1;
    font-family: 'Muli-ExtraBold';
    line-height: 40px;
+   z-index: 20;
 }
 
 .testimonials__comment {
@@ -866,25 +920,24 @@
    max-width: 455px;
    color: rgb(255, 255, 255);
    line-height: 35px;
+   position: relative;
+   z-index: 21;
 }
 
 .comment-author {
    padding: 40px 0 0 0;
    font-size: 18px;
    color: #f7ae3b;
+   position: relative;
+   z-index: 21;
 }
 
 .testimonials__image {
    display: inline-block;
+   position: relative;
+   z-index: 21;
 }
 
-.arrows {
-   padding: 144px 0 80px 0;
-   max-width: 160px;
-   display: flex;
-   margin: 0 auto;
-   justify-content: space-between;
-}
 
 @media (max-width: 1027px) {
    .testimonials__title {
